Version 1.1.0
-------------

WARNING: sfI18N class is not a singleton anymore. To use the sfI18N object, you must get it from the context:
         sfContext::getInstance()->getI18N()

         sfRouting class is not a singleton anymore. To use the sfRouting object, you must get it from the context:
         sfContext::getInstance()->getRouting()

* r3742: added sfAction::renderPartial() method
* All bug fixes from 1.0.0 -> 1.0.X

Version 1.0.0
-------------

No major changes since 1.0.0-rc2.

* r3502: fixed sfFilter::isFirstCall() method
* r3493: removed the DATABASE_NAME constants

* fixed typos in the book

Version 1.0.0-rc2
-----------------

No major changes since 1.0.0-rc1.

* r3385: new propel-dump-data task
* r3377: fixed PEAR installation problem with PEAR 1.5

* new book is now bundled with symfony under the doc/ directory
* added some phpdoc comments

Version 1.0.0-rc1
-----------------

No major changes since beta4.

* r3348: added "The Definitive guide to symfony"
* r3325: better inheritance for admin generator templates
* r3316: updated script.aculo.us to 1.7.0 and prototype to 1.5.0
* r3313: added a new decorate_with() helper
* r3312: added a new isForwardedTo() method to sfTestBrowser
* r3298: fixed tests on windows

* updated phpdoc comments
* added more unit tests (> 3800 now)

Version 1.0.0-beta4
-------------------

Major changes since beta3:

* r3288, r3291, r3293, r3294: better date/time handling in admin generator
* r3285: removed sfContext initialization when initializing symfony
* r3277: added SSL support to sfBrowser
* r3271: refactored rich text editors
* r3258: refactored sfLogger configuration
* r3245: fixed Creole i18n driver
* r3237: added HTTP authentification support for sfBrowser
* r3209: moved getPresentationFor() to the sfController class
* updated phpdoc comments

* fixed some minor bugs (see trac)
* added more unit tests (> 3700 now)

Version 1.0.0-beta3
-------------------

Major changes and major bug fixes since beta2:
